--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -3,12 +3,12 @@
 .topbar-account-widget {
   position: relative;
   height: 100%;
-  min-width: 241px;
+  max-width: 241px;
   transition: all 0.2s ease;
   width: 100%;
   display: flex;
   flex-direction: column;
-  
+  justify-content: center;
 }
 
 .dashboard-topbar {
