add initial colours and redo index.scss

--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -87,7 +87,7 @@
     transition: all 0.2s ease;
 
     &:hover {
-      background: $accent;
+      background: var(--redBg);
       color: white;
     }
   }
