--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -75,13 +75,13 @@ background: linear-gradient(31deg, #0967D2 0%, rgba(33,134,235,1) 100%);
 }
 
 .btn-tiertiary.danger {
-  border: 2px solid $accent;
-  color: $accent;
+  border: 2px solid var(--redBg);
+  color: var(--redBg);
   background-color: var(--highlight);
   transition: all 0.2s ease;
 
   &:hover {
-    background-color: $accent;
+    background-color: var(--redBg);
     color: white;
   }
 }
@@ -182,13 +182,13 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 
 .chat-action.danger {
   background-color: transparent;
-  color: $accent;
+  color: var(--redBg);
   border-radius:5px;
   border-bottom: 2px solid transparent;
   transition: all 0.2s ease;
 
   &:hover {
-    border-bottom: 2px solid $accent;
+    border-bottom: 2px solid var(--redBg);
   }
 }
 
