--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,10 @@
   --green: #3EBD93;
 
   --bg: var(--white-20);
+  --bgLight: var(--white);
+  --highlight: var(--white);
   --textDark: var(--black);
+  --textLight: var(--black-60);
   --text: var(--black-20);
   --success: var(--green);
   --inputBg: var(--white-60);
