--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -18,7 +18,7 @@
 .modal-body {
   display: flex;
   flex-direction: column;
-  background-color: var(--primary);
+  background-color: var(--bg);
   position: absolute;
   top: 3em;
   width: 100%;
@@ -28,7 +28,7 @@
   padding: 1em;
 
   h3 {
-    color: var(--secondary);
+    color: var(--text);
   }
 }
 
