--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -17,7 +17,7 @@
   font-size: 0.8rem;
   letter-spacing: 2px;
   font-weight: 700;
-  color: var(--textDark);
+  color: var(--text);
 }
 
 .form-input {
