--- a/src/components/MessageAuthors/MessageAuthors.scss
+++ b/src/components/MessageAuthors/MessageAuthors.scss
@@ -5,7 +5,7 @@
   border-radius: 10px;
   box-shadow: 0px 2px 10px rgba(black, 0.3);
   overflow: hidden;
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
 }
 
 .message-author-box-header {
