--- a/src/components/PostFetchComp/PostFetchComp.scss
+++ b/src/components/PostFetchComp/PostFetchComp.scss
@@ -5,7 +5,7 @@
 }
 
 .fetch-inputs {
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   border-radius: 5px;
   box-shadow: 0px 2px 10px rgba(black, 0.10);
   margin-bottom: 1em;
