--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -32,7 +32,7 @@
 .post {
   width: 100%;
   height: auto;
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   border-radius: 5px;
   box-shadow: 0px 2px 3px rgba(black, 0.3);
   margin-bottom: 1em;
@@ -40,14 +40,13 @@
    
   .upvotes {
     width: 100%;
-    background: rgb(63,146,240);
-    background: linear-gradient(214deg, rgba(63,146,240,1) 0%, rgba(10,104,210,1) 100%);
+    background: var(--primeGradient);
     padding: 1em;
      
     height: 60px;
     h1,
     i {
-      color: white;
+      color: var(--white);
       font-size: 1.5rem;
     }
   }
@@ -55,19 +54,14 @@
   .subreddit-title {
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--secondary);
+    color: var(--text);
   }
-}
-
-.publish-tag {
-  font-style: italic;
-  font-size: 1rem;
-  color: hsla(211, 12%, 48%,1);
 }
 
 
 .active-post-select {
-  box-shadow: 0px 2px 20px rgba(var(--redBg), 0.4);
+  box-shadow: 0px 2px 20px rgba(#DE3A11, 0.5);
+  
 
   .upvotes {
     background:var(--redBg) !important;
@@ -80,25 +74,24 @@
 }
 
 .sub-detail {
-  background-color: var(--tiertiary);
+  background-color: var(--bg);
   padding: 5px 20px;
   border-radius: 30px;
-  color: var(--secondary);
+  color: var(--text);
 }
 
 .post-flair {
-  text-transform: uppercase;
   font-weight:bold;
   font-size: 0.8rem;
-  padding: 0.3em ;
+  padding: 0.3em 0.7em ;
   border-radius: 20px;
   display: flex;
   align-self: flex-start;
 }
 
 .misc-flair {
-  color: lighten($grey7, 50%);
-  background-color: $grey7;
+  color: var(--bgLight);
+  background-color: var(--highlight);
 }
 
 .has-been-used {
