--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -6,7 +6,7 @@
   }
 
   h3 {
-    color: var(--secondary);
+    color: var(--text);
   }
 }
 
@@ -16,7 +16,7 @@
   top: 0;
   right: 0;
   z-index: 3;
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   align-items: center;
   padding: 0 1em;
   height: 75px;
