--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -27,7 +27,7 @@
   a {
     width: 100%;
     display: flex;
-    color: var(--secondary);
+    color: var(--text);
     text-decoration: none;
     font-weight: 400;
     padding: 0.5em;
@@ -211,7 +211,7 @@
   .nav-item-dropdown {
     display: none;
     flex-direction: column;
-    background-color: var(--highlight);
+    background-color: var(--bgLight);
     width: 200px;
     border-radius: 5px;
     box-shadow: 0px 3px 15px rgba(black, 0.3);
@@ -237,6 +237,9 @@
     justify-content: space-between;
     p {
       display: block;
+    }
+    i {
+      color: var(--highlight);
     }
   }
 }
