--- a/src/layouts/Preferences/Preferences.scss
+++ b/src/layouts/Preferences/Preferences.scss
@@ -8,10 +8,11 @@
     margin-top: -1px;
     z-index: 1;
     margin-left: 1em;
-    color: var(--secondary);
+    color: var(--text);
   }
 
   i {
+    color: var(--text);
     transition: all 0.2s ease;
 
   }
