--- a/src/layouts/RecenlySearched/RecentlySearched.scss
+++ b/src/layouts/RecenlySearched/RecentlySearched.scss
@@ -1,5 +1,5 @@
 .recently-searched {
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   padding: 1em;
   border-radius: 8px;
 
@@ -10,12 +10,12 @@
 
 .searched-term {
   margin: 0.3em;
-  color: var(--secondary);
+  color: var(--text);
   opacity: .8;
   transition: all 0.2s ease;
   text-transform: lowercase;
   border-radius: 20px;
-  background-color: var(--tiertiary);
+  background-color: var(--bg);
   padding: 0.2em 0.8em;
   &:hover {
     opacity: 1;
