--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -25,8 +25,9 @@
   padding: 1em 1.2em;
   font-size: 0.8rem;
   border-radius: 3px;
-  background-color: var(--white-40);
+  background-color: var(--bgLight);
   line-height: 1.8em;
+  color: var(--text);
   &::placeholder {
     color: var(--text);
   }
