--- a/src/components/YouTubeStats/YouTubeStats.scss
+++ b/src/components/YouTubeStats/YouTubeStats.scss
@@ -25,7 +25,7 @@
 }
 
 .dash-subtitle {
-  color: var(--secondary);
+  color: var(--text);
 }
 .stat-stats {
   position: absolute;
@@ -36,12 +36,12 @@
 
   > h3 {
     font-size: 2.8rem;
-    color: var(--secondary);
+    color: var(--text);
   }
 
   > h5 {
     font-size: 1rem;
-    background-color: var(--highlight);
+    background-color: var(--bgLight);
     padding: 5px;
     border-radius: 5px;
     box-shadow: 0px 1px 10px rgba(black, 0.1);
