--- a/src/layouts/Tabs/Tabs.scss
+++ b/src/layouts/Tabs/Tabs.scss
@@ -2,7 +2,7 @@
   width: fit-content;
   flex-wrap: wrap;
   padding: 0.5em;
-  background: var(--highlight);
+  background: var(--bgLight);
   border-radius: 8px;
 }
 
