working on inbxo

--- a/src/Pages/Dashboard/Inbox/Inbox.scss
+++ b/src/Pages/Dashboard/Inbox/Inbox.scss
@@ -5,11 +5,11 @@
   
   a {
     text-decoration: none;
-    color: var(--secondary);
+    color: var(--text);
   }
 
   i {
-    color: var(--secondary);
+    color: var(--text);
     font-size: 0.8rem;
   }
 }
