--- a/src/components/InboxMessage/InboxMessage.scss
+++ b/src/components/InboxMessage/InboxMessage.scss
@@ -18,13 +18,13 @@
   h2, 
   p,
   a {
-    color: var(--secondary);
+    color: var(--text);
   }
 }
 
 .message-subtitle {
   a {
-    color: var(--secondary);
+    color: var(--text);
   margin-top: 0.5em;
   }
 }
