--- a/src/components/ContactsList/ContactsList.scss
+++ b/src/components/ContactsList/ContactsList.scss
@@ -18,17 +18,17 @@
   min-height: 300px;
   border-radius: 8px;
   overflow: hidden;
-  background: var(--highlight);
+  background: var(--bgLight);
   box-shadow: 0px 2px 15px rgba(black, 0.2);
 }
 
 .contact-item-header {
-  background: var(--secondary);
+  background: var(--bgLighter);
   width: 100%;
   padding: 1em;
 
   h2 {
-    color: var(--primary);
+    color: var(--text);
   }
 }
 
@@ -36,7 +36,7 @@
   padding: 0.5em;
   flex: 1;
   p {
-    color: var(--secondary);
+    color: var(--text);
   }
 }
 
@@ -57,19 +57,19 @@
   > .edit {
     display: flex;
     align-items: center;
-    background-color: $grey9;
+    background-color: var(--bg);
     width: 100%;
     height: 40px;
     padding: 0.5em;
     margin-right: 0.5em;
     border-radius: 8px;
-    color: $grey4;
+    color: var(--text);
     font-weight: 700;
     text-decoration: none;
     transition: all 0.2s ease;
 
     &:hover {
-      background: $green;
+      background: var(--success);
       color: white;
     }
   }
@@ -80,9 +80,9 @@
     align-items: center;
     width: 40px;
     height: 40px;
-    color: $grey4;
+    color: var(--text);
     padding: 1em;
-    background: $grey10;
+    background: var(--bg);
     border-radius: 50%;
     transition: all 0.2s ease;
 
