--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -29,7 +29,7 @@
 }
 
 .inbox-item {
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   padding: 1.5em;
   margin-bottom: 1.5em;
   border-radius: 5px;
@@ -39,11 +39,6 @@
   &:hover {
     opacity: 1;
   }
-}
-
-.inbox-item-img {
-  color: var(--accent-primary);
-  font-size: 1.1rem;
 }
 
 .inbox-item-body {
