--- a/src/components/SubmittedItem/SubmittedItem.scss
+++ b/src/components/SubmittedItem/SubmittedItem.scss
@@ -34,7 +34,7 @@
   justify-content: center;
   position: relative;
   i {
-    color: var(--secondary);
+    color: var(--text);
   }
 
   &:hover {
