--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -90,8 +90,8 @@
 }
 
 .misc-flair {
-  color: var(--bgLight);
-  background-color: var(--highlight);
+  color: var(--text);
+  background-color: var(--bg);
 }
 
 .has-been-used {
