--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -150,6 +150,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
   margin-left: 1rem;
   align-self: flex-end;
   outline: none;
+  background-color: transparent;
 }
 
 .chat-action {
@@ -172,7 +173,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 }
 
 .chat-action.primary {
-  background-color: var(--accent);
+  background-color: var(--bg);
   color: var(--text);
 }
 
