--- a/src/components/Forms/forms.scss
+++ b/src/components/Forms/forms.scss
@@ -39,10 +39,10 @@
   position: sticky;
   bottom: 10px;
   width: 100%;
-  background-color: var(--highlight);
+  background-color: var(--bgLight);
   padding: 1em;
   border-radius: 5px;
-  box-shadow: 0px 2px 10px rgba(black, 0.1);
+  box-shadow: 0px 2px 10px rgba(black, 0.2);
 }
 
 .chat-input {
@@ -52,6 +52,7 @@
   outline: none;
   resize: none;
   color: var(--text);
+  background-color: var(--bgLight);
 }
 
 .textarea {
@@ -68,7 +69,7 @@
   background-color: var(--inputBg);
   border: none;
   &::placeholder {
-    color: var(--textLight);
+    color: var(--text);
   }
 }
 
