--- a/src/components/ToggleStatus/ToggleStatus.scss
+++ b/src/components/ToggleStatus/ToggleStatus.scss
@@ -3,7 +3,7 @@
 .toggle {
   display: inline-flex;
   align-items: center;
-  background-color: $grey9;
+  background-color: var(--accentBg);
   margin-right: 0.5em;
   padding: 0.5em;
   border-radius: 20px;
@@ -19,27 +19,27 @@
   font-size: 0.8rem;
   font-weight: 700;
   text-transform: uppercase;
-  color: $grey5;
+  color: var(--white-20);
 }
 
 .toggle-status {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background-color: $grey8;
+  background-color: var(--bg);
   margin-right: 10px;
 }
 
 .toggle.toggled {
-  background-color: $green;
+  background-color: var(--green);
   box-shadow: 0px 2px 15px rgba(black, 0.2);
   .toggle-status {
-    background-color: white;
+    background-color: var(--bg);
     display: flex;
     justify-content: center;
     align-items: center;
     i {
-      color: $green;
+      color: var(--green);
       font-size: 0.7rem;
     }
   }
