--- a/src/Webbuilder/Static/modules/SocialItem/SocialItem.scss
+++ b/src/Webbuilder/Static/modules/SocialItem/SocialItem.scss
@@ -1,9 +1,9 @@
-@import '../../../../colours.scss';
+ 
 
 .static-social-link {
   margin: 0.5em;
 }
 
 .static-social-link.light {
-  color: $grey6;
+  color: var(--text);
 }
