--- a/src/Pages/PricingPage/PricingPage.scss
+++ b/src/Pages/PricingPage/PricingPage.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .pricing-wrapper {
   margin-top: 5em;
 }
@@ -7,7 +6,7 @@
 .highlight.tag {
   i,
   p {
-    color: $blue7;
+    color: var(--blue-20);
     font-weight: 700;
   }
   
@@ -26,7 +25,7 @@
   max-width: 250px;
   border-radius: 8px;
   overflow: hidden;
-  background:white;
+  background:var(--bgLight);
   box-shadow: 0px 2px 20px rgba(black, 0.1);
   margin:0 1em;
 }
@@ -49,7 +48,7 @@
   margin-bottom: 1em;
 
   .fa-check {
-    color: $green;
+    color: var(--green);
   }
 }
 
@@ -83,7 +82,7 @@
 }
 
 .term-item.active {
-  background-color: $blue6;
+  background-color: var(--blue-20);
   border-radius: 5px;
   opacity: 1;
   h3 {
