--- a/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
+++ b/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
@@ -1,18 +1,16 @@
-@import '../../../colours.scss';
-
+ 
 .multi-input {
   height: 40px;
   border-radius: 5px;
   overflow: hidden;
-  border: 1.5px solid $grey7;
   background-color: var(--secondary);
 }
 .preffix,
 .suffix {
-  background-color: $grey7;
+  background-color: var(--bgLight);
   height: 100%;
   padding: 0.5em 1em;
-  color: $grey9;
+  color: var(--text);
   font-weight: 700;
   display: flex;
   justify-content: center;
@@ -26,21 +24,21 @@
 
 .tabs-item a {
   text-decoration: none;
-  color: $grey7;
+  color: var(--black-60);
   padding: 0.5em 1em;
    
 }
 
 .tab-item-active {
-  background-color: $blue5;
+  background-color: var(--blue-60);
   color: white !important;
   border-radius: 5px;
-  box-shadow: 0px 2px 15px rgba($blue5, 0.4);
+  box-shadow: 0px 2px 15px rgba(black, 0.4);
 }
 
 .site-preview-window {
   padding: 0.5em;
-  background-color: $grey1;
+  background-color: var(--bg);
   width: 100%;
   height: 800px;
 }
