--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .btn-primary {
  background: var(--primeGradient);
   color: white;
@@ -62,15 +61,15 @@
   border:1.5px solid transparent;
 
   &:hover {
-    color: $blue8;
-    border:1.5px solid $blue8;
+    color: var(--blue-40);
+    border:1.5px solid var(--blue-40);
 
   }
 }
 
 .btn-tiertiary.active {
-  background-color: $yellow7;
-  color: $grey3;
+  background-color: var(--yellow);
+  color: var(--text);
 }
 
 .btn-tiertiary.danger {
@@ -100,7 +99,7 @@
   transition: all 0.2s ease;
 
   &:hover {
-    background-color: $grey8;
+    background-color: var(--bg);
     color: white;
   }
   i {
@@ -116,7 +115,7 @@
   border: none;
   box-shadow: 0px 2px 10px rgba(black, 0.2);
   &:hover {
-    background-color: darken($green, 5%);
+    background-color: darken(#3EBD93, 5%);
     box-shadow: 0px 2px 10px rgba(black, 0.4);
 
     border: none;
@@ -146,7 +145,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
   align-items: center;
   justify-content: center;
   font-size: 1rem;
-  color: $green;
+  color: var(--green);
   margin-left: 1rem;
   align-self: flex-end;
   outline: none;
@@ -175,6 +174,11 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 .chat-action.primary {
   background-color: var(--bg);
   color: var(--text);
+  transition: all 0.2s ease;
+  &:hover {
+    background-color: var(--accentBg);
+    color: white;
+  }
 }
 
 .chat-action.danger {
@@ -230,7 +234,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 }
 
 button:disabled {
-  background-color: $grey7;
+  background-color: var(--black-60);
 }
 
 @keyframes grow {
