--- a/src/components/ConfirmModal/ConfirmModal.scss
+++ b/src/components/ConfirmModal/ConfirmModal.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .modal-wrapper {
   display: inline-flex;
   justify-content: center;
@@ -44,13 +43,13 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: rgba($grey6, 0.2);
+  background-color: rgba(black, 0.2);
   transition: all 0.2s ease;
 
   z-index: 99;
   &:hover {
-    background-color: white;
-    color: $grey3;
+    background-color: var(--bg);
+    color: var(--text);
   }
 }
 
@@ -58,7 +57,7 @@
 
   .arrow {
     font-size: 1.8rem;
-    color: $grey7;
+    color: var(--text);
   }
 }
 
@@ -78,7 +77,7 @@
   }
   i {
     font-size: 5rem;
-    color: $green;
+    color: var(--green);
   }
 }
 
