--- a/src/components/Loading/AppLoader.scss
+++ b/src/components/Loading/AppLoader.scss
@@ -1,10 +1,9 @@
 
-@import '../../colours.scss';
-
+ 
 .state-title {
   text-transform: uppercase;
   font-size: 1rem;
-  color: $grey4;
+  color: var(--text);
   margin-top:2em;
   letter-spacing: 2px;
 }
@@ -29,7 +28,7 @@
   position: absolute;
   width: 5px;
   height: 5px;
-  background: $blue2;
+  background: var(--bgLight);
   border-radius: 50%;
   animation: lds-default 1.2s linear infinite;
 }
