--- a/src/components/Loading/Loading.scss
+++ b/src/components/Loading/Loading.scss
@@ -1,8 +1,7 @@
-@import '../../colours.scss';
-
+ 
 .loader {
     border: 7px solid #f3f3f3; /* Light grey */
-    border-top: 7px solid $grey5; /* Blue */
+    border-top: 7px solid var(--blue-20); /* Blue */
     border-radius: 50%;
     width: 50px;
     height: 50px;
