--- a/src/components/ToggleStatus/ToggleStatus.scss
+++ b/src/components/ToggleStatus/ToggleStatus.scss
@@ -1,9 +1,8 @@
-@import '../../colours.scss';
-
+ 
 .toggle {
   display: inline-flex;
   align-items: center;
-  background-color: var(--accentBg);
+  background-color: var(--black-60);
   margin-right: 0.5em;
   padding: 0.5em;
   border-radius: 20px;
