--- a/src/components/UserInbox/UserInbox.scss
+++ b/src/components/UserInbox/UserInbox.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .inbox-wrapper {
   width: 100%;
 }
@@ -43,7 +42,7 @@
 
 .inbox-item-body {
   display: block;
-  color: $grey7;
+  color: var(--black-60);
   margin-top: 0.5em;
   word-break: break-word;
   white-space: nowrap;
