--- a/src/layouts/NavWidget/NavWidget.scss
+++ b/src/layouts/NavWidget/NavWidget.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .topbar-account-widget {
   position: relative;
   height: 100%;
@@ -38,7 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: $grey4;
+  color: var(--text);
   flex-direction: column;
 
 }
