--- a/src/layouts/Navbar/Navbar.scss
+++ b/src/layouts/Navbar/Navbar.scss
@@ -1,5 +1,4 @@
-@import '../../colours.scss';
-
+ 
 .nav-toggle {
   position: fixed;
   display: flex;
@@ -50,7 +49,7 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba($grey1, 0.9);
+  background-color: rgba(black, 0.9);
   overflow: auto;
   padding: 5em 0;
   .nav-link {
@@ -120,7 +119,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: $grey4;
+  color: var(--text);
   flex-direction: column;
 
 }
