--- a/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
+++ b/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
@@ -1,7 +1,6 @@
-@import '../../colours.scss';
-
+ 
 .site-save-status {
-  background: $yellow7;
+  background: var(--yellow);
   padding: 0.5em 1em;
   border-radius: 5px;
   box-shadow: 0px 2px 15px rgba(black, 0.2);
