--- a/src/layouts/Tab/Tab.scss
+++ b/src/layouts/Tab/Tab.scss
@@ -1,8 +1,7 @@
-@import '../../colours.scss';
-
+ 
 .tabs-item a {
   text-decoration: none;
-  color: $grey7;
+  color: var(--text);
   padding: 0.5em 1em;
    
   border-radius: 5px;
@@ -18,5 +17,5 @@
 background: linear-gradient(214deg, rgba(63,146,240,1) 0%, rgba(10,104,210,1) 100%);
   color: white !important;
   border-radius: 5px;
-  box-shadow: 0px 2px 15px rgba($blue5, 0.4);
+  box-shadow: 0px 2px 15px rgba(63,146,240, 0.4);
 }
