continue refining theming

--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -73,7 +73,7 @@
 }
 
 .sub-detail {
-  background-color: var(--bg);
+  background-color: var(--bgLighter);
   padding: 5px 20px;
   border-radius: 30px;
   color: var(--text);
@@ -90,7 +90,7 @@
 
 .misc-flair {
   color: var(--text);
-  background-color: var(--bg);
+  background-color: var(--bgLighter);
 }
 
 .has-been-used {
