--- a/src/layouts/RecenlySearched/RecentlySearched.scss
+++ b/src/layouts/RecenlySearched/RecentlySearched.scss
@@ -15,7 +15,7 @@
   transition: all 0.2s ease;
   text-transform: lowercase;
   border-radius: 20px;
-  background-color: var(--bg);
+  background-color: var(--bgLighter);
   padding: 0.2em 0.8em;
   &:hover {
     opacity: 1;
