finalize change over

--- a/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
+++ b/src/Webbuilder/Dashboard/SiteIndex/SiteIndex.scss
@@ -7,7 +7,7 @@
 }
 .preffix,
 .suffix {
-  background-color: var(--bgLight);
+  background-color: var(--bgLighter);
   height: 100%;
   padding: 0.5em 1em;
   color: var(--text);
