--- a/src/layouts/Announcement/Announcement.scss
+++ b/src/layouts/Announcement/Announcement.scss
@@ -4,23 +4,19 @@
   display: flex;
   padding: 1.5em;
   &-title {
-    color: white;
+    color: var(--text);
     font-weight: bold;
     margin-right: 1em;
     white-space: nowrap;
   }
 
   &-body {
-    color: rgba(white, 0.7);
+    color: var(--textLight);
   }
 
   &-close {
-    color: rgba(white,0.7);
+    color: var(--textLight);
     transition: all 0.2s ease;
-
-    &:hover {
-      color: white;
-    }
   }
 }
 
