fix some styling

--- a/src/components/SubredditPost/SubredditPost.scss
+++ b/src/components/SubredditPost/SubredditPost.scss
@@ -116,7 +116,7 @@
   width: 100%;
   padding: 0.5em;
   div {
-    color: var(--secondary);
+    color: var(--text);
     font-size: 0.8rem;
     margin: 0 0.5em;
 
