--- a/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
+++ b/src/Webbuilder/Static/StorySubmission/StorySubmission.scss
@@ -7,11 +7,11 @@
   margin: 3em auto;
   padding: 0.5em;
   &.dark {
-    background-color: var(--primary);
+    background-color: var(--bg);
   }
 
   .headline {
-    color: var(--secondary);
+    color: var(--text);
   }
 
   
@@ -25,7 +25,7 @@
 
 #preview-body {
   * {
-    color: var(--secondary);
+    color: var(--text);
   }
 
   ul {
