--- a/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
+++ b/src/layouts/SiteSaveStatus/SiteSaveStatus.scss
@@ -5,7 +5,7 @@
   border-radius: 5px;
   box-shadow: 0px 2px 15px rgba(black, 0.2);
   p {
-    color: var(--text);
+    color: var(--black-20);
     font-weight: 700;
   }
 }
