just somee different style changes

--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -56,7 +56,7 @@
   margin-left: 0.5em;
   transition: all 0.2s ease;
 
-  background-color: var(--bg);
+  background-color: var(--bgLight);
   border-radius:5px;
   border:1.5px solid transparent;
 
