--- a/src/layouts/Tabs/Tabs.scss
+++ b/src/layouts/Tabs/Tabs.scss
@@ -1,9 +1,11 @@
 .tabs-wrapper {
+  display: flex;
   width: fit-content;
   flex-wrap: wrap;
   padding: 0.5em;
   background: var(--bgLight);
   border-radius: 8px;
+  margin: 0.5em 0;
 }
 
 @media screen and (max-width: 425px) {
