--- a/src/Pages/Dashboard/Overview/Overview.scss
+++ b/src/Pages/Dashboard/Overview/Overview.scss
@@ -4,3 +4,9 @@
   padding: 0.5em;
   border-radius: 8px;
 }
+
+.module-wrapper {
+  background: var(--bgLight);
+  padding: 0.5em;
+  border-radius: 5px;
+}
