--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -172,7 +172,7 @@ background: linear-gradient(31deg, rgba(62,76,89,1) 0%, rgba(154,165,177,1) 100%
 }
 
 .chat-action.primary {
-  background-color: var(--bg);
+  background-color: var(--bgLight);
   color: var(--text);
   transition: all 0.2s ease;
   &:hover {
