--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,7 @@
   --green: #3EBD93;
   --blueGradient: linear-gradient(214deg, rgba(63,146,240,1) 0%, rgba(10,104,210,1) 100%);
   --greenGradient: linear-gradient(31deg, rgba(62,189,147,1) 0%, rgba(31,214,154,1) 100%);
+  --proGradient: linear-gradient(270deg, rgba(216,38,255,1) 0%, rgba(83,15,135,1) 100%);
   --forest: #0C6B58;
   --forest-20: #199473;
   // backgrounds
